# rinth

./: .gitignore  Cargo.toml  LICENSE  LICENSE-BSD  README.md
examples/determination/: main  project.yml
examples/megalovania/: channel  project.yml
examples/megalovania-no-delay/: channel  project.yml
rinth-midi/: Cargo.toml
rinth-midi/src/: main.rs
rinth-synth/: Cargo.toml
rinth-synth/src/: fm.rs  main.rs  shared.rs  ssg.rs
rinth-types/: Cargo.toml
rinth-types/src/: file.rs  lib.rs  note.rs  traits.rs
